1.8: Priming Sugar + fix menu (sidebar) drop down on mobile scroll+fixed top)

--- a/css/main.css
+++ b/css/main.css
@@ -63,20 +63,24 @@ body {
 /* Hide for mobile, show later */
 .sidebar {
   display: none;
+  position: fixed;
+  top: 50px;
+  right: 0;
+  bottom: 0;
+  overflow-y: scroll;
+  z-index: 1000;
+  background-color: #f5f5f5;
 }
 
 @media (min-width: 768px) {
   .sidebar {
-    position: fixed;
-    top: 51px;
     bottom: 0;
-    left: 0;
-    z-index: 1000;
+    left:0;
+    right: auto;
     display: block;
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
     border-right: 1px solid #eee;
   }
 }
